--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="container">
         <nav class="navbar">
           <div class="nav-logo">
-            <img src="images/logo.svg" alt="logo" />
+            <img src="./images/logo.svg" alt="logo" />
           </div>
           <ul class="nav-links">
             <li>About</li>
