--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="container">
         <div class="vr-container">
           <div class="vr-img">
-            <img src="/images/desktop/image-interactive.jpg" alt="" />
+            <img src="./images/desktop/image-interactive.jpg" alt="" />
           </div>
           <div class="vr-content">
             <h2>
