--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
         <div class="img-gallery">
           <div class="img-box">
-            <img src="/images/desktop/image-deep-earth.jpg" alt="" />
+            <img src="./images/desktop/image-deep-earth.jpg" alt="" />
           </div>
           <div class="img-box">
             <img src="/images/desktop/image-night-arcade.jpg" alt="" />
