--- a/index.html
+++ b/index.html
@@ -76,25 +76,25 @@
             <img src="./images/desktop/image-deep-earth.jpg" alt="" />
           </div>
           <div class="img-box">
-            <img src="/images/desktop/image-night-arcade.jpg" alt="" />
+            <img src="./images/desktop/image-night-arcade.jpg" alt="" />
           </div>
           <div class="img-box">
-            <img src="/images/desktop/image-soccer-team.jpg" alt="" />
+            <img src="./images/desktop/image-soccer-team.jpg" alt="" />
           </div>
           <div class="img-box">
-            <img src="/images/desktop/image-grid.jpg" alt="" />
+            <img src="./images/desktop/image-grid.jpg" alt="" />
           </div>
           <div class="img-box">
-            <img src="/images/desktop/image-from-above.jpg" alt="" />
+            <img src="./images/desktop/image-from-above.jpg" alt="" />
           </div>
           <div class="img-box">
-            <img src="/images/desktop/image-pocket-borealis.jpg" alt="" />
+            <img src="./images/desktop/image-pocket-borealis.jpg" alt="" />
           </div>
           <div class="img-box">
-            <img src="/images/desktop/image-curiosity.jpg" alt="" />
+            <img src="./images/desktop/image-curiosity.jpg" alt="" />
           </div>
           <div class="img-box">
-            <img src="/images/desktop/image-fisheye.jpg" alt="" />
+            <img src="./images/desktop/image-fisheye.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -104,7 +104,7 @@
         <div class="footer-container">
           <div class="footer-links">
             <div class="footer-logo">
-              <img src="/images/logo.svg" alt="logo" />
+              <img src="./images/logo.svg" alt="logo" />
             </div>
             <ul class="quick-links">
               <li>About</li>
@@ -116,10 +116,10 @@
           </div>
           <div class="social-links">
             <div class="footer-icons">
-              <img src="/images/icon-facebook.svg" alt="" />
-              <img src="/images/icon-twitter.svg" alt="" />
-              <img src="/images/icon-instagram.svg" alt="" />
-              <img src="/images/icon-pinterest.svg" alt="" />
+              <img src="./images/icon-facebook.svg" alt="" />
+              <img src="./images/icon-twitter.svg" alt="" />
+              <img src="./images/icon-instagram.svg" alt="" />
+              <img src="./images/icon-pinterest.svg" alt="" />
             </div>
             <p class="copyrights">
               &copy; 2024 Designed by Santhosh. All rights reserved.
